kube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: manognya5/backend
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
          limits:
            cpu: 20m
        ports:
        - containerPort: 5000
