kube/model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model
        image: model:v5
        imagePullPolicy: Never
        ports:
        - containerPort: 5005
