kube/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model
spec:
  selector:
    app: model
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
  type: ClusterIP
